// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly 1`] = `
<div
  className="wrapper"
>
  <div
    className="tag"
  >
    tagName
  </div>
</div>
`;

exports[`Tag renders correctly with onClick 1`] = `
<div
  className="wrapper"
>
  <button
    className="tag btn"
    onClick={[MockFunction]}
    type="button"
  >
    tagName
  </button>
</div>
`;

exports[`Tag renders correctly with onDelete 1`] = `
<div
  className="wrapper"
>
  <div
    className="tag"
  >
    tagName
  </div>
  <button
    aria-label="Remove tagName tag"
    className="delete btn"
    onClick={[MockFunction]}
    type="button"
  />
</div>
`;
